# misis-cjsc-lct-yakutia-2023

./: .drone.yml  .gitignore
backend/: Dockerfile  Dockerfile.no-buildkit  pyproject.toml
backend/src/cjsc_backend/: config.py  main.py
backend/src/cjsc_backend/db/: databases.py
backend/src/cjsc_backend/db/repos/: message.py  user.py
backend/src/cjsc_backend/http/routers/: events.py  messages.py  signals.py  users.py  utils.py  weather.py
backend/src/cjsc_backend/http/schemas/: message.py  user.py
backend/src/cjsc_backend/models/: message.py  user.py
backend/src/cjsc_backend/setup/: logging.py
backend/src/cjsc_backend/utils/: events_parser.py  translator.py  weather_parser.py
docs/: Dockerfile
ml/: Dockerfile  Dockerfile.no-buildkit  pyproject.toml
ml/src/cjsc_ml/: config.py  main.py
ml/src/cjsc_ml/db/: databases.py
ml/src/cjsc_ml/db/repos/: regulatory_doc.py
ml/src/cjsc_ml/http/routers/: messages.py
ml/src/cjsc_ml/http/schemas/: message.py
ml/src/cjsc_ml/ml_models/: models.py
ml/src/cjsc_ml/models/: regulatory_doc.py
telegram-bot/: pyproject.toml
telegram-bot/src/cjsc_telegram_bot/: main.py
telegram-bot/src/cjsc_telegram_bot/http/schemas/: message.py  weather.py
vk-bot/: Dockerfile  Dockerfile.no-buildkit  pyproject.toml
vk-bot/src/cjsc_vk_bot/: config.py  main.py
vk-bot/src/cjsc_vk_bot/http/schemas/: event.py  message.py  user.py
vk-bot/src/cjsc_vk_bot/models/: vk_message.py
vk-bot/src/cjsc_vk_bot/utils/: events_msg.py  language.py  query_ml.py  weather_msg.py
