[tool.poetry]
name = "misis-cjsc-lct-yakutia-2023-ml"
packages = [{include = "cjsc_ml", from="src"}]
version = "0.0.1"
description = ""
authors = ["0xb1b1 <hello@axelreitenbach.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.6.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"
pyhumps = "^3.8.0"
fastapi-jwt = "^0.2.0"
pydantic-mongo = "^2.0.3"
sentry-sdk = {extras = ["fastapi", "loguru", "pymongo"], version = "^1.38.0"}
requests = "^2.31.0"
tqdm = "^4.66.1"
joblib = "^1.3.2"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
torch = "^2.1.2"
transformers = "^4.36.1"
datasets = "^2.15.0"
peft = "^0.7.1"
accelerate = "^0.25.0"
sentencepiece = "^0.1.99"
bitsandbytes = "^0.41.3.post2"
tika = "^2.6.0"
protobuf = "^4.25.1"
catboost = "^1.2.2"
faiss-cpu = "^1.7.4"

[tool.poetry.scripts]
start = "cjsc_ml.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
