[tool.poetry]
name = "misis-cjsc-lct-yakutia-2023-telegram-bot"
packages = [{include = "cjsc_telegram_bot", from="src"}]
version = "0.0.1"
description = ""
authors = ["0xb1b1 <hello@axelreitenbach.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.2"
loguru = "^0.7.2"
pydantic-mongo = "^2.0.3"
sentry-sdk = {extras = ["fastapi", "loguru", "pymongo", "aiohttp"], version = "^1.38.0"}
requests = "^2.31.0"
aiogram = "^3.2.0"

[tool.poetry.scripts]
start = "cjsc_telegram_bot.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
